<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/d_24"
        android:layout_marginTop="@dimen/d_62"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_cons_menu_burger" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/d_24"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/profile_photo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/d_24"
        android:layout_marginTop="@dimen/d_30"
        android:fontFamily="@font/lato"
        android:text="@string/Find"
        android:textSize="@dimen/s_34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:text="@string/your_doctor"
        android:textColor="@color/text_grey"
        android:textSize="@dimen/s_34"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="0dp"
        android:layout_height="@dimen/d_56"
        android:layout_marginLeft="@dimen/d_24"
        android:layout_marginTop="@dimen/d_24"
        android:layout_marginRight="@dimen/d_24"
        android:background="@drawable/search_bar_shape"
        android:ems="10"
        android:hint="@string/searchText"
        android:inputType="text"
        android:paddingLeft="@dimen/d_16"
        android:paddingTop="@dimen/d_16"
        android:paddingRight="@dimen/d_16"
        android:paddingBottom="@dimen/d_16"
        android:textColorHint="@color/editText_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/d_16"
        app:layout_constraintBottom_toBottomOf="@+id/editTextText"
        app:layout_constraintEnd_toEndOf="@+id/editTextText"
        app:layout_constraintTop_toTopOf="@+id/editTextText"
        app:srcCompat="@drawable/search_icon" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:columnCount="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        app:rowCount="4">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/d_17"
            android:layout_marginRight="@dimen/d_17"
            android:layout_marginBottom="@dimen/d_4"
            app:layout_column="0"
            app:layout_row="0"
            app:srcCompat="@drawable/_c_consultation" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/d_11"
            android:gravity="center"
            android:text="@string/Consultation"
            android:textSize="@dimen/s_12"
            app:layout_column="0"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/d_17"
            android:layout_marginRight="@dimen/d_17"
            app:layout_column="1"
            app:layout_row="0"
            app:srcCompat="@drawable/_c_dental" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/d_27"
            android:text="@string/Dental"
            android:textSize="@dimen/s_12"
            app:layout_column="1"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/d_17"
            android:layout_marginRight="@dimen/d_17"
            app:layout_column="2"
            app:layout_row="0"
            app:srcCompat="@drawable/_c_heart" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="29dp"
            android:text="@string/Heart"
            android:textSize="@dimen/s_12"
            app:layout_column="2"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/d_17"
            android:layout_marginRight="@dimen/d_17"
            app:layout_column="3"
            app:layout_row="0"
            app:srcCompat="@drawable/_c_hospitals" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/Hospitals"
            android:textSize="@dimen/s_12"
            app:layout_column="3"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/d_17"
            android:layout_marginTop="@dimen/d_8"
            android:layout_marginRight="@dimen/d_17"
            android:layout_marginBottom="@dimen/d_4"
            app:layout_column="0"
            app:layout_row="2"
            app:srcCompat="@drawable/_c_medicines" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:text="@string/Medicines"
            android:textSize="@dimen/s_12"
            app:layout_column="0"
            app:layout_row="3" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/d_17"
            android:layout_marginTop="@dimen/d_8"
            android:layout_marginRight="@dimen/d_17"
            app:layout_column="1"
            app:layout_row="2"
            app:srcCompat="@drawable/_c_physician" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/Physician"
            android:textSize="@dimen/s_12"
            app:layout_column="1"
            app:layout_row="3" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/d_17"
            android:layout_marginTop="@dimen/d_8"
            android:layout_marginRight="@dimen/d_17"
            app:layout_column="2"
            app:layout_row="2"
            app:srcCompat="@drawable/_c_skin" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="33dp"
            android:text="@string/Skin"
            android:textSize="@dimen/s_12"
            app:layout_column="2"
            app:layout_row="3" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/d_17"
            android:layout_marginTop="8dp"
            android:layout_marginRight="@dimen/d_17"
            app:layout_column="3"
            app:layout_row="2"
            app:srcCompat="@drawable/_c_surgeon" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:text="@string/Surgeon"
            android:textSize="@dimen/s_12"
            app:layout_column="3"
            app:layout_row="3" />
    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/d_24"
        android:layout_marginTop="@dimen/d_24"
        android:text="@string/Top_doctors"
        android:textSize="@dimen/s_18"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        android:fontFamily="@font/lato"/>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/d_24"
        android:text="@string/ViewAll"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView11" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/d_8"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:listitem="@layout/recycler_row" />

</androidx.constraintlayout.widget.ConstraintLayout>