<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d_16"
        android:background="@drawable/doctor_bg_shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/doctor_example" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/d_16"
        android:layout_marginTop="@dimen/d_16"
        android:fontFamily="@font/lato_bold"
        android:text="@string/drName"
        android:textSize="@dimen/s_16"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/d_16"
        android:fontFamily="@font/lato"
        android:text="@string/Heart"
        android:textColor="@color/TextGrey"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/d_8"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="@+id/textView14"
        app:srcCompat="@drawable/small_dot" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/d_8"
        android:text="@string/hospital"
        android:textColor="@color/TextGrey"
        app:layout_constraintBottom_toBottomOf="@+id/imageView13"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toTopOf="@+id/imageView13" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:srcCompat="@drawable/stars" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/d_4"
        android:text="(1221)"
        android:textColor="@color/TextGrey"
        android:textSize="@dimen/s_10"
        app:layout_constraintBottom_toBottomOf="@+id/imageView14"
        app:layout_constraintStart_toEndOf="@+id/imageView14"
        app:layout_constraintTop_toTopOf="@+id/imageView14" />

    <TextView
        android:id="@+id/openId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="@drawable/open_button_shape"
        android:paddingLeft="13dp"
        android:paddingTop="@dimen/d_4"
        android:paddingRight="13dp"
        android:paddingBottom="@dimen/d_4"
        android:text="@string/open"
        android:textColor="@color/green"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView16" />
</androidx.constraintlayout.widget.ConstraintLayout>