<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/doctor_large"
        android:background="@drawable/doctor_bg_shape"/>

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_arrow" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kaydet" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/drName"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView15" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/Heart"
        android:textColor="@color/TextGrey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView18"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        app:layout_constraintTop_toTopOf="@+id/textView18"
        app:srcCompat="@drawable/small_dot" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/hospital"
        android:textColor="@color/TextGrey"
        app:layout_constraintBottom_toBottomOf="@+id/imageView18"
        app:layout_constraintStart_toEndOf="@+id/imageView18"
        app:layout_constraintTop_toTopOf="@+id/imageView18" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/desc"
        android:textColor="@color/TextGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="16dp"
        android:text="Experience"
        android:textColor="@color/text_black"
        android:textSize="@dimen/s_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="3"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView21"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="yr."
        android:textColor="@color/TextGrey"
        app:layout_constraintBottom_toBottomOf="@+id/textView22"
        app:layout_constraintStart_toEndOf="@+id/textView22" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toStartOf="@+id/textView24"
        app:layout_constraintStart_toEndOf="@+id/textView21"
        app:srcCompat="@drawable/straight_line"
        tools:layout_editor_absoluteY="559dp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Patient"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textView27"
        app:layout_constraintStart_toEndOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="1221"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView24"
        app:layout_constraintStart_toStartOf="@+id/textView24"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ps"
        android:textColor="@color/TextGrey"
        app:layout_constraintBottom_toBottomOf="@+id/textView25"
        app:layout_constraintStart_toEndOf="@+id/textView25" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/textView27"
        app:layout_constraintStart_toEndOf="@+id/textView24"
        app:srcCompat="@drawable/straight_line"
        tools:layout_editor_absoluteY="559dp" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="55dp"
        android:text="Rating"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView24" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5.0"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView25"
        app:layout_constraintEnd_toEndOf="@+id/textView27"
        app:layout_constraintStart_toStartOf="@+id/textView27"
        app:layout_constraintTop_toTopOf="@+id/textView25"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23"
        app:srcCompat="@drawable/comment_bg" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageView21"
        app:layout_constraintEnd_toEndOf="@+id/imageView21"
        app:layout_constraintStart_toStartOf="@+id/imageView21"
        app:layout_constraintTop_toTopOf="@+id/imageView21"
        app:srcCompat="@drawable/comment" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView21"
        app:srcCompat="@drawable/appointment" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_bold"
        android:text="Make an appointment"
        android:textColor="@color/appointment"
        app:layout_constraintBottom_toBottomOf="@+id/imageView23"
        app:layout_constraintEnd_toEndOf="@+id/imageView23"
        app:layout_constraintStart_toStartOf="@+id/imageView23"
        app:layout_constraintTop_toTopOf="@+id/imageView23" />


</androidx.constraintlayout.widget.ConstraintLayout>